# genealogy_ai

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
api/: main.py
graph/: family_graph.py  neo4j_manager.py
nlp/: entities.py  extractor.py
ocr/: preprocess.py  reader.py
tests/: test_genealogy.py
ui/: app.py
