[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genealogy-ai"
version = "1.0.0"
description = "Reconnaissance de documents d'état civil pour construire un arbre généalogique"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # OCR
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
    "easyocr>=1.7.0",
    "pytesseract>=0.3.10",
    # Image
    "opencv-python>=4.9.0",
    "Pillow>=10.0.0",
    # NLP
    "spacy>=3.7.0",
    "rapidfuzz>=3.6.0",
    # LLM
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "ollama>=0.2.0",
    "anthropic>=0.25.0",
    # Graphe
    "networkx>=3.2.0",
    "matplotlib>=3.8.0",
    "neo4j>=5.18.0",
    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    # Interface
    "streamlit>=1.33.0",
    # Export
    "python-gedcom>=1.0.0",
    # Utilitaires
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
genealogy-ai = "genealogy_ai.main:main"

[tool.hatch.build.targets.wheel]
packages = ["genealogy_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle + pyflakes + isort
